--- a/ThreeDPolarEquations/index.html
+++ b/ThreeDPolarEquations/index.html
@@ -4,7 +4,7 @@
 
   <!-- PLEASE NO CHANGES BELOW THIS LINE (UNTIL I SAY SO) -->
   <script language="javascript" type="text/javascript" src="libraries/p5.js"></script>
-  <script language="javascript" type="text/javascript" src="p5js-temp-ThreeDPolarEquations608114073982639901.js"></script>
+  <script language="javascript" type="text/javascript" src="ThreeDPolarEquations.js"></script>
   <!-- OK, YOU CAN MAKE CHANGES BELOW THIS LINE AGAIN -->
 
   <!-- This line removes any default padding and style. 
